# biomappings

./: .bumpversion.cfg  .cruft.json  .flake8  .gitignore  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  mappings.tsv  predictions.tsv  pyproject.toml  registry.yml  setup.cfg  setup.py  tox.ini  tox.ini.rej
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: checks.yml  cruft.yml  ndex.yml  tests.yml  update_web.yml
biomappings/resources/: predictions.tsv
biomappings/tests/: test_validity.py
docker/: Dockerfile  README.md  startup.sh
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  _config.yml  download.md  duplicates.md  graph.md  index.md  summary.md  triangles.md
docs/_data/: biomappings.sssom.tsv  biomappings.sssom.yml  components_with_duplicate_prefixes.yml  incomplete_components.yml  summary.yml
docs/_data/sssom/: README.md  biomappings.sssom.yml
docs/_includes/: footer.html  head.html
docs/img/: components.eps  summary.eps
docs/source/: cli.rst  conf.py  custom.rst  index.rst  installation.rst  predict.rst  usage.rst
notebooks/: Biased Measurement of Precision.ipynb  Evaluation.ipynb  Hetionet Duplication Analysis.ipynb  Measurement of Curation Precision.ipynb  Process CLO Mappings.ipynb  askem-summary.ipynb  cancer-cell-line-mappings.ipynb  chemical_identifier_evaluation_full.tsv  chemicals-unbiased-evaluation.ipynb  clinical-trials-indication-mapping.ipynb  curation-benefit.ipynb  curation-precision.ipynb  hetionet-pathway-duplication.ipynb
scripts/: README.md  add_mesh_xrefs_to_cl_owl.py  add_mesh_xrefs_to_doid_owl.py  add_mesh_xrefs_to_mondo.py  add_mesh_xrefs_to_uberon_obo.py  bulk_curation.py  clinical_trials_mesh_ids.ipynb  culture_to_chemistry.py  educational_resources.py  generate_BERTMap_predictions.py  generate_agrovoc_mappings.py  generate_bto_cl_mappings.py  generate_ccle_mappings.py  generate_chebi_mappings.py  generate_chebi_mesh_mappings.py  generate_cl_mesh_mappings.py  generate_clo_mappings.py  generate_clo_mesh_mappings.py  generate_doid_mappings.py  generate_doid_mesh_mappings.py  generate_edam_mesh_mappings.py  generate_efo_mesh_mappings.py  generate_gilda_mappings.py  generate_hp_mappings.py  generate_hp_mesh_mappings.py  generate_kegg_orthologs.py  generate_maxo_mappings.py  generate_maxo_mesh_mappings.py  generate_mesh_mappings.py  generate_mesh_uniprot_mappings.py  generate_mesh_uniprot_mouse_mappings.py  generate_mondo_mappings.py  generate_mondo_mesh_mappings.py  generate_pathway_mappings.py  generate_reactome_orthologs.py  generate_uberon_bto_mappings.py  generate_uberon_mappings.py  generate_uberon_mesh_mappings.py  generate_vaccine_mappings.py  generate_vo_drugbank.py  (+8 more)
src/biomappings/: __init__.py  __main__.py  _git_utils.py  apicuron.py  bertmap.py  bulk_curation.py  cli.py  export_sssom.py  gilda_utils.py  graph.py  lexical.py  lexical_core.py  lexical_utils.py  mapping_graph.py  orthologs.py  paper_analysis.py  summary.py  testing.py  upload_ndex.py  utils.py  version.py  wsgi.py  wsgi_utils.py
src/biomappings/contribute/: __init__.py  fowl.py  functional_owl.py  obo.py  ofn.py  ofn_additive.py  ofn_grammar.py  utils.py
src/biomappings/curator/: __init__.py  _git_utils.py  charts.py  lexical.py  merge.py  repo.py  summary.py  testing.py  wsgi_utils.py
src/biomappings/curator/templates/: base.html  summary.html
src/biomappings/resources/: __init__.py  add_confidence_column.py  curators.tsv  export_sssom.py  incorrect.tsv  mappings.tsv  mondo_mesh_mappings.tsv  negative.sssom.tsv  positive.sssom.tsv  predictions.tsv  semapv.json  semapv.py  unsure.sssom.tsv  unsure.tsv  update_curated.py  update_unsure.py
src/biomappings/templates/: base.html  home.html  summary.html
src/biomappings/tests/: test_validity.py
tests/: __init__.py  test_contribute.py  test_contribute_obo.py  test_contribute_ofn.py  test_export.py  test_lexical.py  test_validity.py  test_wsgi.py
