##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = biomappings
version = 0.1.3-dev
description = Curated and predicted mappings between biomedical identifiers in different namespaces
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/biomappings
download_url = https://github.com/biopragmatics/biomappings/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/biomappings/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    biology

[options]
install_requires =
    networkx
    requests
    click
    pyyaml
    tqdm
    pystow>=0.2.7
    bioregistry>=0.4.29

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biomappings = biomappings.cli:main

[options.extras_require]
tests =
    pytest
charts =
    matplotlib
    seaborn
pyobo =
    pyobo>=0.7.0
web =
    flask
    bootstrap-flask
    flask-wtf
ndex =
    ndex2
exports =
    sssom

# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biomappings
omit =
    tests/*
    docs/*
    src/biomappings/cli/*
    src/biomappings/__main__.py

[coverage:paths]
source =
    src/biomappings
    .tox/*/lib/python*/site-packages/biomappings

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
