##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = biomappings
version = 0.3.5-dev
description = Curated and predicted mappings between biomedical identifiers in different namespaces
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/biomappings
download_url = https://github.com/biopragmatics/biomappings/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/biomappings/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    biology

[options]
install_requires =
    networkx
    requests
    click
    pyyaml
    tqdm
    pystow>=0.2.7
    bioregistry>=0.5.104

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biomappings = biomappings.cli:main

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx<7.0
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
charts =
    matplotlib
    seaborn
pyobo =
    pyobo>=0.8.4
apicuron =
    apicuron_client
web =
    flask
    bootstrap-flask
    flask-wtf
gilda =
    gilda
    pyobo>=0.8.4
ndex =
    ndex2
exports =
    sssom

# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biomappings
omit =
    tests/*
    docs/*
    src/biomappings/cli/*
    src/biomappings/__main__.py

[coverage:paths]
source =
    src/biomappings
    .tox/*/lib/python*/site-packages/biomappings

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    biomappings
    tests
